dev: Add test data for statement editing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="module" src="/dev/mockData.js"></script>
     <script type="module" src="/dev/main.js"></script>
+    <script type="module" src="/dev/init.js"></script>
+		<a href="/addStatement">Add Statement</a><br>
+		<a href="/pointInTime">Point in time</a><br>
+		<a href="/quantityWithUnit">Quantity with unit</a>
   </body>
 </html>
