--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="module" src="/dev/init.js"></script>
 		<a href="/addStatement">Add Statement</a><br>
 		<a href="/pointInTime">Point in time</a><br>
-		<a href="/quantityWithUnit">Quantity with unit</a>
+		<a href="/quantityWithUnit">Quantity with unit</a><br>
+		<a href="/quantityWithBounds">Quantity with unit</a><br>
   </body>
 </html>
