--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<a href="/addStatement">Add Statement</a><br>
 		<a href="/pointInTime">Point in time</a><br>
 		<a href="/quantityWithUnit">Quantity with unit</a><br>
-		<a href="/quantityWithBounds">Quantity with unit</a><br>
+		<a href="/quantityWithoutUnit">Quantity without unit</a><br>
+		<a href="/quantityWithBounds">Quantity with uncertainty</a><br>
   </body>
 </html>
