--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script type="module" src="/dev/mockData.js"></script>
     <script type="module" src="/dev/main.js"></script>
     <script type="module" src="/dev/init.js"></script>
-		<a href="/addStatement">Add Statement</a><br>
-		<a href="/pointInTime">Point in time</a><br>
-		<a href="/quantityWithUnit">Quantity with unit</a><br>
-		<a href="/quantityWithoutUnit">Quantity without unit</a><br>
-		<a href="/quantityWithBounds">Quantity with uncertainty</a><br>
+    <a href="/addStatement">Add Statement</a><br />
+    <a href="/pointInTime">Point in time</a><br />
+    <a href="/quantityWithUnit">Quantity with unit</a><br />
+    <a href="/quantityWithoutUnit">Quantity without unit</a><br />
+    <a href="/quantityWithBounds">Quantity with uncertainty</a><br />
   </body>
 </html>
